--- a/css/style_main.css
+++ b/css/style_main.css
@@ -40,27 +40,25 @@ h4{
 .basefill {
 	position: relative;
 	width: 80px; 
-	height:20px;
+	height:26px;
 	background-color: red;
-	margin-top: 10px;
+	margin-top: 0px;
 	font-family: "Arial Black", Gadget, sans-serif;
 	font-size: 14px;
 	text-align: center;
-	padding-top: 7px;
-	cursor: pointer;	
+	padding-top: 5px;
+	cursor: pointer;
+
 }
 
 .empty {
 	display: inline-table;
 	background-color: white;
 	width: 86px; 
-	height:22px;
-
+	height:28px;
+	border:none;
 }
 
-.hold {
-	border:solid #0C0 4px;
-}
 
 table { 
 text-align: center;
@@ -74,8 +72,9 @@ text-align: center;
 
 .inner-table {
 	bgcolor="#CCCCCC";
-	font-size:0.75em;
+	font-size:10px;
 	color:#D5D5D5;
+	border-size:1px;
 	border-color:#CCC;
 	border-collapse:collapse;
 	border:dotted;
