--- a/css/style_main.css
+++ b/css/style_main.css
@@ -25,11 +25,11 @@ textarea {
 h1{
 	font-family:Arial, Helvetica, sans-serif;
 	font-size: 2.5em;
-	padding:0.25em;
+	padding:0.20em;
 }
 
 h4{
-	margin-top: 80px;
+	margin-top: 30px;
 	font-family:Arial, Helvetica, sans-serif;
 	color: #3CF; 
 	margin-left: 50px;
@@ -38,25 +38,46 @@ h4{
 }
 
 .basefill {
-	position: relative;
 	width: 80px; 
-	height:26px;
+	height:30px;
 	background-color: red;
 	margin-top: 0px;
 	font-family: "Arial Black", Gadget, sans-serif;
 	font-size: 14px;
 	text-align: center;
-	padding-top: 5px;
+	vertical-align: center;
 	cursor: pointer;
-
+	align-items: center;
+	border-radius: 6px;
+	padding-top: 10px;
+	border:none;
 }
+
+.basefill15 {
+	width: 40px; 
+	height:30px;
+	background-color: red;
+	margin-top: 0px;
+	font-family: "Arial Black", Gadget, sans-serif;
+	font-size: 14px;
+	text-align: center;
+	vertical-align: center;
+	cursor: pointer;
+	align-items: center;
+	border-radius: 6px;
+	padding-top: 10px;
+	border:none;
+}
+
+
 
 .empty {
 	display: inline-table;
 	background-color: white;
-	width: 86px; 
-	height:28px;
-	border:none;
+	width: 80px; 
+	height:30px;
+	border: none;
+	align-items: center;
 }
 
 
@@ -67,23 +88,23 @@ text-align: center;
 .main-table {
 	 border: 2px solid black;
 	 border-collapse: collapse;
-
 }
 
 .inner-table {
 	bgcolor="#CCCCCC";
 	font-size:10px;
 	color:#D5D5D5;
-	border-size:1px;
-	border-color:#CCC;
-	border-collapse:collapse;
-	border:dotted;
+	border-width: 0px;
+	border-collapse: collapse;
+	align-items: center;
+	align: center;
+	text-align: center;
 }
 
 th {
 	font-family:"Arial Black", Gadget, sans-serif;
 	font-size: 1.5em;
-	height:40px;
+	height: 40px;
 	color:#FFFFFF;	
 	background-color:#666;
 }
