--- a/css/style_main.css
+++ b/css/style_main.css
@@ -33,51 +33,53 @@ h4{
 	font-family:Arial, Helvetica, sans-serif;
 	color: #3CF; 
 	margin-left: 50px;
-	position:relative;
+	position relative;
 	
 }
 
-.basefill {
-	width: 80px; 
-	height:30px;
-	background-color: red;
-	margin-top: 0px;
-	font-family: "Arial Black", Gadget, sans-serif;
-	font-size: 14px;
-	text-align: center;
-	vertical-align: center;
-	cursor: pointer;
-	align-items: center;
-	border-radius: 6px;
-	padding-top: 10px;
-	border:none;
-}
-
-.basefill15 {
-	width: 40px; 
-	height:30px;
-	background-color: red;
-	margin-top: 0px;
-	font-family: "Arial Black", Gadget, sans-serif;
-	font-size: 14px;
-	text-align: center;
-	vertical-align: center;
-	cursor: pointer;
-	align-items: center;
-	border-radius: 6px;
-	padding-top: 10px;
-	border:none;
-}
-
-
-
 .empty {
-	display: inline-table;
+	display: inline-block;
 	background-color: white;
 	width: 80px; 
 	height:30px;
 	border: none;
+	margin: 0px;
+}
+
+.basefill {
+	display: inline-block;
+	width: 80px; 
+	height: 30px;
+	background-color: red;
+	margin-top: 1px;
+	font-family: "Arial Black", Gadget, sans-serif;
+	font-size: 14px;
+	color: black;
+	text-align: center;
+	vertical-align: middle;
+	cursor: pointer;
 	align-items: center;
+	border-radius: 6px;
+	border: none;
+	padding-top: 8px;
+	border:none;
+	display: inline-block;
+}
+
+.basefill15 {
+	width: 40px; 
+	height: 30px;
+	background-color: red;
+	margin-top: 0px;
+	font-family: "Arial Black", Gadget, sans-serif;
+	font-size: 14px;
+	text-align: center;
+	vertical-align: center;
+	cursor: pointer;
+	align-items: center;
+	border-radius: 6px;
+	padding-top: 8px;
+	border:none;
 }
 
 
@@ -95,17 +97,19 @@ text-align: center;
 	font-size:10px;
 	color:#D5D5D5;
 	border-width: 0px;
-	border-collapse: collapse;
 	align-items: center;
 	align: center;
 	text-align: center;
+	margin: 0px;
+	vertical-align:	top;
+	padding: 0px;
 }
 
 th {
 	font-family:"Arial Black", Gadget, sans-serif;
 	font-size: 1.5em;
 	height: 40px;
-	color:#FFFFFF;	
+	color:#29D4E2;	
 	background-color:#666;
 }
 
@@ -115,11 +119,12 @@ th {
 
 
 tr { 
-	text-align:center;
+	text-align: center;
 }
 
 td {
 	 height: 30px; 
+	 vertical-align: top;
 }
 
 
